--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "node-fetch": "^3.3.2",
     "openai": "^6.9.1",
     "twilio": "^5.10.7",
     "ws": "^8.18.3"
