--- a/package.json
+++ b/package.json
@@ -1,3 +1,8 @@
+"scripts": {
+  "start": "node index.js",
+  "test": "echo \"Error: no test specified\" && exit 1"
+}
+
 {
   "name": "homiq-voice-agent",
   "version": "1.0.0",
