--- a/package.json
+++ b/package.json
@@ -1,48 +1,15 @@
 {
   "name": "homiq-voice-agent",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
   "type": "module",
+  "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "node-fetch": "^3.3.2",
-    "openai": "^6.9.1",
-    "twilio": "^5.10.7",
-    "ws": "^8.18.3"
-  }
-}
-"scripts": {
-  "start": "node index.js",
-  "test": "echo \"Error: no test specified\" && exit 1"
-}
-
-{
-  "name": "homiq-voice-agent",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "module",
-  "dependencies": {
-    "dotenv": "^17.2.3",
-    "express": "^5.2.1",
-    "node-fetch": "^3.3.2",
-    "openai": "^6.9.1",
-    "twilio": "^5.10.7",
-    "ws": "^8.18.3"
+    "openai": "^6.9.1"
   }
 }
