--- a/package.json
+++ b/package.json
@@ -1,15 +1,24 @@
 {
-  "name": "homiq-voice-agent",
+  "name": "homiq-voice-backend",
   "version": "1.0.0",
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "dependencies": {
-    "dotenv": "^17.2.3",
-    "express": "^5.2.1",
-    "node-fetch": "^3.3.2",
-    "openai": "^6.9.1"
+    "@base44/sdk": "^0.8.4",
+    "axios": "^1.6.7",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "openai": "^4.35.0",
+    "twilio": "^5.1.0",
+    "body-parser": "^1.20.2",
+    "morgan": "^1.10.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
   }
 }
